<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_signup_full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cv_signup_full_name"
        android:text="@string/sign_up_full_name_title"
        android:fontFamily="@font/league_spartan_light"
        android:textSize="14sp"
        android:textColor="@color/gray_400">

    </TextView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_signup_full_name"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_signup_full_name"
        app:cardCornerRadius="18dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:cardBackgroundColor="@color/black_almost"
        app:strokeColor="@color/black_almost"
        app:strokeWidth="1.20dp"
        android:layout_marginTop="8dp">

        <ro.ase.chirita.xscrypt.components.EditTextPersonalized
            android:id="@+id/et_signup_full_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black_almost"
            android:paddingStart="8dp"
            android:paddingEnd="16dp"
            android:layout_marginStart="16dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:fontFamily="@font/league_spartan_regular"
            android:maxLines="1"
            android:inputType="textPersonName"
            >
        </ro.ase.chirita.xscrypt.components.EditTextPersonalized>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_signup_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_signup_full_name"
        app:layout_constraintBottom_toTopOf="@id/cv_signup_email"
        android:text="@string/sign_up_email_title"
        android:fontFamily="@font/league_spartan_light"
        android:textSize="14sp"
        android:textColor="@color/gray_400">

    </TextView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_signup_email"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_signup_email"
        app:cardCornerRadius="18dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:cardBackgroundColor="@color/black_almost"
        app:strokeColor="@color/black_almost"
        app:strokeWidth="1.20dp"
        android:layout_marginTop="8dp">

        <ro.ase.chirita.xscrypt.components.EditTextPersonalized
            android:id="@+id/et_signup_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black_almost"
            android:paddingStart="8dp"
            android:paddingEnd="16dp"
            android:layout_marginStart="16dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:fontFamily="@font/league_spartan_regular"
            android:maxLines="1"
            android:inputType="textEmailAddress">
        </ro.ase.chirita.xscrypt.components.EditTextPersonalized>


    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_signup_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_signup_email"
        android:text="@string/sign_up_password_title"
        android:fontFamily="@font/league_spartan_light"
        android:textSize="14sp"
        android:textColor="@color/gray_400">

    </TextView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_signup_password"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_signup_password"
        app:cardCornerRadius="18dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:cardBackgroundColor="@color/black_almost"
        app:strokeColor="@color/black_almost"
        app:strokeWidth="1.20dp"
        android:layout_marginTop="8dp">

        <ro.ase.chirita.xscrypt.components.EditTextPersonalized
            android:id="@+id/et_signup_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black_almost"
            android:paddingStart="8dp"
            android:paddingEnd="16dp"
            android:layout_marginStart="16dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:fontFamily="@font/league_spartan_regular"
            android:maxLines="1"
            android:inputType="textPassword"
            >
        </ro.ase.chirita.xscrypt.components.EditTextPersonalized>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_signup_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_signup_password"
        android:text="@string/sign_up_category"
        android:fontFamily="@font/league_spartan_light"
        android:textSize="14sp"
        android:textColor="@color/gray_400">

    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_signup_category"
        android:layout_marginTop="16dp"
        android:gravity="center">

        <RadioGroup
            android:id="@+id/rg_signup_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_signup_category_patient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_patient_category"
                android:fontFamily="@font/league_spartan_regular"
                android:textStyle="bold"
                android:layout_marginEnd="32dp"
                android:layout_marginHorizontal="8dp"
                android:paddingHorizontal="16dp"
                android:background="@drawable/radio_selector"
                android:button="@drawable/radio_null"
                android:gravity="center"
                android:elevation="4dp"
                android:letterSpacing="0.05"
                android:textColor="@drawable/radio_text_selector"
                android:checked="true">

            </RadioButton>

            <RadioButton
                android:id="@+id/rb_signup_category_doctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_doctor_category"
                android:letterSpacing="0.05"
                android:textStyle="bold"
                android:fontFamily="@font/league_spartan_regular"
                android:layout_marginHorizontal="8dp"
                android:background="@drawable/radio_selector"
                android:button="@drawable/radio_null"
                android:layout_marginStart="32dp"
                android:gravity="center"
                android:elevation="4dp"
                android:paddingHorizontal="16dp"
                android:textColor="@drawable/radio_text_selector">
            </RadioButton>


        </RadioGroup>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signup_fragment"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textAllCaps="false"
        android:text="@string/sign_up_next_button"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="@font/league_spartan_regular"
        android:background="@drawable/buttons_blue_light_black_borders"
        android:textSize="19sp"
        android:letterSpacing="0.05">
    </androidx.appcompat.widget.AppCompatButton>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="48dp"
        android:visibility="gone">

    </ProgressBar>

</androidx.constraintlayout.widget.ConstraintLayout>