<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/cl_create_wallet_mid"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginTop="32dp"
      >

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_login_password"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="18dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:cardBackgroundColor="@color/black_almost"
        android:layout_marginTop="8dp">

      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_create_wallet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal">

          <ImageView
              android:id="@+id/ib_create_wallet_exclamation"
              android:layout_width="28dp"
              android:layout_height="28dp"
              android:layout_marginTop="2dp"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintEnd_toStartOf="@id/ll_create_wallet"
              android:src="@drawable/ic_exclamation_mark"
              android:backgroundTint="@color/negrul_forta">

          </ImageView>

          <TextView
              android:id="@+id/tv_create_wallet_text_1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/never_share_your_secret_phrase_with_anyone_back_it_up_and_keep_it_safe"
              android:textSize="14sp"
              android:layout_marginStart="16dp"
              android:textColor="@color/white"
              android:fontFamily="@font/league_spartan_regular" />
        </LinearLayout>


      </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


  </androidx.constraintlayout.widget.ConstraintLayout>

  <com.google.android.material.card.MaterialCardView
      android:id="@+id/cv_phrase"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/cl_create_wallet_mid"
      app:cardCornerRadius="18dp"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      app:cardBackgroundColor="@color/black_almost"
      app:strokeColor="@color/neon_v2"
      app:strokeWidth="1.50dp"
      android:layout_marginTop="32dp">

    <TextView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/league_spartan_light"
        android:textSize="19sp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:inputType="textMultiLine">

    </TextView>


  </com.google.android.material.card.MaterialCardView>

  <ImageButton
      android:id="@+id/ib_copy"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/ic_copy"
      android:backgroundTint="@color/negrul_forta"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/cv_phrase"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginTop="4dp">

  </ImageButton>


  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/btn_create_wallet"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toTopOf="@id/tv_create_wallet_terms_of_use"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp"
      android:layout_marginBottom="8dp"
      android:textAllCaps="false"
      android:text="@string/create_wallet_finish_button"
      android:textStyle="bold"
      android:textColor="@color/black"
      android:fontFamily="@font/league_spartan_regular"
      android:background="@drawable/buttons_blue_light_black_borders"
      android:textSize="19sp"
      android:letterSpacing="0.05">
  </androidx.appcompat.widget.AppCompatButton>

  <TextView
      android:id="@+id/tv_create_wallet_terms_of_use"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      android:layout_marginBottom="32dp"
      android:textColor="@color/gray_400"
      android:fontFamily="@font/league_spartan_light"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp"
      android:textSize="12sp"
      android:gravity="center"
      android:text="@string/terms_of_use">

  </TextView>

  <ProgressBar
      android:id="@+id/progress_bar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      android:layout_marginBottom="48dp"
      android:visibility="gone">

  </ProgressBar>



</androidx.constraintlayout.widget.ConstraintLayout>